# fastapi_api_course

./: README.md  pyproject.toml  sql_app.db
app/: main.py  models.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py
